segundo comit de audio andres 06-05-2024

--- a/index.html
+++ b/index.html
@@ -103,5 +103,198 @@
         </div>
     </section>
 
+    <div class="suscribete">
+
+        <h3>SUSCRIBETE PARA TENER MAS NOVEDADES</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia, deleniti deserunt
+            tenetur vel dignissimos illum architecto nobis eaque nihil ipsum nostrum ut sunt illo quia,
+            vero sapiente possimus quidem!</p>
+            <form action="">
+                <input type="email" placeholder="ingresa tu email">
+                <input type="submit" value="suscribete">
+            </form>
+    </div>
+
+    <section class="opiniones" id="opiniones">
+
+        <h1 class="heading">opiniones de clientes</h1>
+        <div class="caja-contenedor">
+            <div class="caja">
+                <i class="fa-brands fa-youtube"></i>
+                <div class="user">
+                    <img src="imgs/user_1.png" alt="">
+                    <h3>pedro</h3>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="comentarios">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum minima harum
+                            ipsum doloremque dolores ad impedit culpa similique quas dolore animi odit delectus
+                            iusto quibusdam earum recusandae, eaque dolor!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="caja">
+                <i class="fa-brands fa-youtube"></i>
+                <div class="user">
+                    <img src="imgs/user_2.png" alt="">
+                    <h3>maria</h3>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="comentarios">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum minima harum
+                            ipsum doloremque dolores ad impedit culpa similique quas dolore animi odit delectus
+                            iusto quibusdam earum recusandae, eaque dolor!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="caja">
+                <i class="fa-brands fa-youtube"></i>
+                <div class="user">
+                    <img src="imgs/user_3.png" alt="">
+                    <h3>david</h3>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="comentarios">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum minima harum
+                            ipsum doloremque dolores ad impedit culpa similique quas dolore animi odit delectus
+                            iusto quibusdam earum recusandae, eaque dolor!</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="precios" id="precios">
+        <h1 class="heading">planes de precios</h1>
+        <div class="caja-contenedor">
+            <div class="caja">
+                <h3 class="titulo">tradicionales</h3>
+                <div class="tipos">$70 <span>/con factura</span></div>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i> manos libres</li>
+                    <li><i class="fa-solid fa-check"></i> resistentes al agua</li>
+                    <li><i class="fa-solid fa-xmark"></i> extra bass</li>
+                    <li><i class="fa-solid fa-xmark"></i> cancelacion de ruido</li>
+                </ul>
+                <a href="#" class="btn">compra ya!!!</a>
+            </div>
+
+            <div class="caja">
+                <h3 class="titulo">diadema</h3>
+                <div class="tipos">$70 <span>/con factura</span></div>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i> manos libres</li>
+                    <li><i class="fa-solid fa-check"></i> resistentes al agua</li>
+                    <li><i class="fa-solid fa-check"></i> extra bass</li>
+                    <li><i class="fa-solid fa-xmark"></i> cancelacion de ruido</li>
+                </ul>
+                <a href="#" class="btn">compra ya!!!</a>
+            </div>
+
+            <div class="caja">
+                <h3 class="titulo">inalambricos</h3>
+                <div class="tipos">$70 <span>/con factura</span></div>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i> manos libres</li>
+                    <li><i class="fa-solid fa-check"></i> resistentes al agua</li>
+                    <li><i class="fa-solid fa-check"></i> extra bass</li>
+                    <li><i class="fa-solid fa-check"></i> cancelacion de ruido</li>
+                </ul>
+                <a href="#" class="btn">compra ya!!!</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="contactos" id="contactos">
+        <div class="image">
+            <img src="imgs/form_img.png" alt="">
+        </div>
+
+        <form action="">
+            <h1 class="heading">contactos</h1>
+            <div class="inputcaja">
+                <input type="text"  required>
+                <label for="">Nombre</label>
+            </div>
+
+            <div class="inputcaja">
+                <input type="email"  required>
+                <label for="">Email</label>
+            </div>
+
+            <div class="inputcaja">
+                <input type="email"  required>
+                <label for="">Number</label>
+            </div>
+
+            <div class="inputcaja">
+                <textarea required name="" id="" cols="30"
+                rows="10"></textarea>
+                <label for="">mensaje</label>
+            </div>
+
+            <input type="submit" class="btn" value="enviar">
+        </form>
+    </section>
+
+    <div class="footer">
+        <div class="caja-contenedor">
+            <div class="caja">
+                <h3>noticias e informacion</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, magni sed velit
+                    eius aspernatur eveniet exercitationem suscipit doloribus deserunt rem recusandae.
+                    Fugit tenetur itaque omnis totam fuga eaque corrupti quam?</p>
+            </div>
+
+            <div class="caja">
+                <h3>buscanos en</h3>
+                <a href="#">facebook</a>
+                <a href="#">instagram</a>
+                <a href="#">pinterest</a>
+                <a href="#">twitter</a>
+            </div>
+
+
+            <div class="caja">
+                <h3>mas informacion</h3>
+
+                <div class="info">
+                    <i class="fa-thin fa-phone"></i>
+                    <p>123-456-789 <br>789-444-521</p>
+                </div>
+
+                <div class="info">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>audioandres@gmail.com <br>audioandygmail.com</p>
+                </div>
+
+                <div class="info">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>123-456-789 <br>789-444-521</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
