audio andres terminado html y css

--- a/index.html
+++ b/index.html
@@ -290,10 +290,15 @@
 
                 <div class="info">
                     <i class="fa-solid fa-location-dot"></i>
-                    <p>123-456-789 <br>789-444-521</p>
+                    <p>Castilla la Nueva - Meta <br>789-444-521</p>
                 </div>
+
             </div>
         </div>
+
+        <h1 class="creditos">
+            &copy, copyrigth @2021 Andres Martinez youtube
+        </h1>
     </div>
 
 </body>
