cambios del dia 02-09-2024

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
                 <p id="comprado2" style="display: none;">has añadido este objeto al carrito de compras</p>
 
-                <button id="btn" class="btn" onclick="añadir_carrito('comprado2')" >compra ya!!!</button>
+                <button id="btn" class="btn" onclick="añadir_carrito('comprado2')" onclick="quitar_carrito('comprado2')" >compra ya!!!</button>
                 
             </div>
         </div>
@@ -316,7 +316,7 @@
         </div>
 
         <h1 class="creditos">
-            &copy, copyrigth @2021 Andres Martinez youtube
+            &copy copyrigth @2024 Andres Martinez 
         </h1>
     </div>
 
